Remove unused link highlight clip layer

Link highlights have two cc::Layers: one for clipping and one for the
contents. The clip layer is unused today and may have never been
implemented (see: original patch without clip support [1]).

[1] https://chromium.googlesource.com/chromium/src/+/7baf240818b3b0c1be0ea64209881b8cebded493

Bug: 857501
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I1261c1ccbb9b81534ca0db5bcbc369d73ca00173
Reviewed-on: https://chromium-review.googlesource.com/1121694
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571995}