third_party/blink/renderer/core/paint/link_highlight_impl.h
@@ -61,8 +61,6 @@ class CORE_EXPORT LinkHighlightImpl final : public LinkHighlight,
   static std::unique_ptr<LinkHighlightImpl> Create(Node*, WebViewImpl*);
   ~LinkHighlightImpl() override;
 
-  cc::PictureLayer* ContentLayer();
-  cc::Layer* ClipLayer();
   void StartHighlightAnimationIfNeeded();
   void UpdateGeometry();
 
@@ -104,7 +102,6 @@ class CORE_EXPORT LinkHighlightImpl final : public LinkHighlight,
   bool ComputeHighlightLayerPathAndPosition(const LayoutBoxModelObject&);
 
   scoped_refptr<cc::PictureLayer> content_layer_;
-  scoped_refptr<cc::Layer> clip_layer_;
   Path path_;
 
   Persistent<Node> node_;
